tests/ui/basic/logical_and_type_error.rs
use metamatch::eval;

fn main() {
    eval! {
        5 && true
    };
}
